continued grid implementation

--- a/src/grid.css
+++ b/src/grid.css
@@ -10,5 +10,10 @@
 .grid table td{
     border: 1px solid black;
     margin: 0;
-    padding: 1em;
+    padding: 0;
+    background-color: white;
+}
+
+.grid .bg-black{
+	background-color: black;
 }
